--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ background-color: #764C4D }
 .btns{ 
 
 height: 100px;
+width: 200px;
 background-color: #1A0004;
 
   font-family: "Roboto", serif;
@@ -34,12 +35,14 @@ background-color: #1A0004;
   font-size: 40px;
   color: #764C4D;
   border-radius: 10px;
+  border-width: 0px;
 
  }
  .btnsContainer{ 
  display: grid;
  grid-template-columns: 1fr 1fr ; 
 gap: 10px;
+
 margin-top: 10px;
 }
 
