add and style titleheader

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ display: flex;
 flex-direction:column;
 justify-content:center; 
 align-items: center;
+background-color: #764C4D;
 }
 #gameboard{ 
 width: 500px;
@@ -17,10 +18,27 @@ border-width: 4px;
 gap: 10px;
 
  }
+.gameTitle{ 
+color:  #1A0004; 
+
+
+
+}
+
+
+.gameTitle, .btns{ 
+  font-weight: 800;
+  font-style: normal;
+
+font-family: serif;
+
+ }
+
+
 
 .slots{ 
 
-background-color: #764C4D }
+background-color: #1A0004 }
 
 
 .btns{ 
@@ -29,9 +47,6 @@ height: 100px;
 width: 200px;
 background-color: #1A0004;
 
-  font-family: "Roboto", serif;
-  font-weight: 800;
-  font-style: normal;
   font-size: 40px;
   color: #764C4D;
   border-radius: 10px;
